Fix wrap

--- a/src/components/Contacts/Contacts.module.scss
+++ b/src/components/Contacts/Contacts.module.scss
@@ -7,9 +7,7 @@
 .ContactsItem {
     display: flex;
     padding: 10px;
-    // white-space:normal;
-    // overflow-wrap: break-word;
-    word-break: break-all;
+    word-break: break-word;
 
     align-items: center;
     min-height: 60px;
